{style} product + fix header wrap

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -390,6 +390,9 @@ textarea {
 .bg-custom {
   background-color: var(--bg-color-custom);
 }
+.bg-primary {
+  background-color: var(--color-primary);
+}
 .underline {
   text-decoration-line: underline;
   text-underline-offset: 3px;
