--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1999,13 +1999,15 @@ menu-drawer.active .modal-inner {
   transform: translate(-50%, -50%) rotate(90deg);
 }
 @media screen and (min-width: 1025px) {
-  .rounded-1025-left, .rtl .rounded-1025-right{
+  .rounded-1025-left,
+  .rtl .rounded-1025-right {
     border-top-left-radius: var(--img-rounded);
     border-bottom-left-radius: var(--img-rounded);
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
-  .rounded-1025-right, .rtl .rounded-1025-left{
+  .rounded-1025-right,
+  .rtl .rounded-1025-left {
     border-top-right-radius: var(--img-rounded);
     border-bottom-right-radius: var(--img-rounded);
     border-top-left-radius: 0;
@@ -2027,12 +2029,12 @@ menu-drawer.active .modal-inner {
   }
 }
 @media (min-width: 1025px) {
-  .image-with-text__container{
-  padding-inline: 3rem;
-  } 
+  .image-with-text__container {
+    padding-inline: 3rem;
+  }
 }
 @media (max-width: 1025px) {
-  .image-with-text__container{
-  padding-top: 2rem;
-  } 
+  .image-with-text__container {
+    padding-top: 2rem;
+  }
 }
